Semi working version
This now has most of the functionality I want, the only thing missing is
sorting. However, the jsmol view is a bit buggy. This is likely do to me
jmoltools incorrectly, but we'll see.

--- a/static/templates/pairs-table.html
+++ b/static/templates/pairs-table.html
@@ -1,6 +1,6 @@
 <div class='panel panel-default'>
   <div class='panel-heading'>
-    Family: <strong>{{family}}</strong>
+    <strong>{{family}}</strong>
 
     <!-- <div class='input-group'> -->
     <!--   <div class='input-group-btn'> -->
