Add sequence data attribute

--- a/static/templates/pairs-table.html
+++ b/static/templates/pairs-table.html
@@ -26,7 +26,8 @@
 
     <tbody>
       {{#each nts}}
-      <tr id='row-{{sequence}}' class='jmol-toggle' data-unit-ids='{{nt1}},{{nt2}}'>
+      <tr id='row-{{sequence}}' class='jmol-toggle'
+        data-unit-ids='{{nt1}},{{nt2}}' data-sequence='{{sequence}}'>
         <td>{{sequence}}</td>
         <td>{{group}}</td>
         <td>{{nt1}}</td>
