Add place to mark if rows have no 3D
Not all things have 3D information associated with them. In these cases we will
mark the rows so people know this. This may not be the best way to this, but I
will use it for now.

--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -18,7 +18,7 @@
 
     <tbody>
       {{#each nts}}
-      <tr id='row-{{sequence}}' class='jmol-toggle'
+      <tr id='row-{{sequence}}' class='jmol-toggle {{class}}'
         data-unit-ids='{{nt1}},{{nt2}}' data-sequence='{{sequence}}'>
         <td>{{sequence}}</td>
         <td>{{group}}</td>
