Use icons to show warning in the table
I'm using font awesome fonts symbols to show a warning when we have or do not
have the 3D information for each exemplar. I think this is a bit cleaner than
using a colored row.

--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -11,22 +11,20 @@
         <th>Count</th>
         <th>PDB</th>
         <th>Resolution</th>
-        <th>Nucleotide 1</th>
-        <th>Nucleotide 2</th>
+        <th>Nucleotides</th>
       </tr>
     </thead>
 
     <tbody>
       {{#each nts}}
-      <tr id='row-{{sequence}}' class='jmol-toggle {{class}}'
+      <tr id='row-{{sequence}}' class='jmol-toggle'
         data-unit-ids='{{nt1}},{{nt2}}' data-sequence='{{sequence}}'>
-        <td>{{sequence}}</td>
+        <td><i class="fa {{icon}}"></i>&nbsp;{{sequence}}</td>
         <td>{{group}}</td>
         <td>{{count}}</td>
         <td>{{pdb}}</td>
         <td>{{resolution}}</td>
-        <td>{{nt1}}</td>
-        <td>{{nt2}}</td>
+        <td>{{nt1}}, {{nt2}}</td>
       </tr>
       {{/each}}
     </tbody>
