Don't show the row as active if we have no 3D
This makes it clear that there is something different about this row. We may
also also add a popup to say that this is something without a 3D. I'm not sure
yet.

--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -17,7 +17,7 @@
 
     <tbody>
       {{#each nts}}
-      <tr id='row-{{sequence}}' class='jmol-toggle'
+      <tr id='row-{{sequence}}' class='jmol-toggle {{class}}'
         data-unit-ids='{{nt1}},{{nt2}}' data-sequence='{{sequence}}'>
         <td><i class="fa {{icon}}"></i>&nbsp;{{sequence}}</td>
         <td>{{group}}</td>
