On hover show if no 3D coordinates exist

--- a/static/templates/heat-map-template.hbs
+++ b/static/templates/heat-map-template.hbs
@@ -1,2 +1,5 @@
 <h6>{{sequence}}</h6>
 <p><span>IsoDiscrepancy Index: {{idi}}</span></p>
+{{#unless exists}}
+<p><span>No 3D Coordinates Available</span></p>
+{{/unless}}
