--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -7,7 +7,7 @@
     <thead>
       <tr>
         <th>Sequence</th>
-        <th>IDI Group</th>
+        <th>Isostericty Group</th>
         <th>Count</th>
         <th>PDB</th>
         <th>Resolution</th>
