Fix displaying nts and resolution when none exist
We were showing blank in resolution and a single comman in the nts. I've changed
it to be blank in the NA resolution and blank in the nts. This is better I
believe.

--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -23,7 +23,7 @@
         <td>{{count}}</td>
         <td>{{pdb}}</td>
         <td>{{resolution}}</td>
-        <td>{{units.[0]}}, {{units.[1]}}</td>
+        <td>{{nts}}</td>
       </tr>
       {{/each}}
     </tbody>
