Add hover to show we have no 3D
Now we add a simple hover that shows information when hovering over an exemplar
that does not have a structure. The hover only shows up in the sequence cell
which is what contains the sequence and warning symbol.

--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -18,7 +18,7 @@
     <tbody>
       {{#each items}}
       <tr id='{{id}}' class='jmol-toggle {{class}}' data-sequence='{{sequence}}'>
-        <td><i class="fa {{icon}}"></i>&nbsp;{{sequence}}</td>
+        <td class='sequence-cell'><i class="fa {{icon}}"></i>&nbsp;{{sequence}}</td>
         <td>{{group}}</td>
         <td>{{count}}</td>
         <td>{{pdb}}</td>
