--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -17,7 +17,8 @@
 
     <tbody>
       {{#each items}}
-      <tr id='{{id}}' class='jmol-toggle {{class}}' data-sequence='{{sequence}}'>
+      <tr id='{{id}}' class='jmol-toggle {{class}}' data-sequence='{{sequence}}'
+        data-pdb-url={{pdb_url}}>
         <td class='sequence-cell'><i class="fa {{icon}}"></i>&nbsp;{{sequence}}</td>
         <td>{{group}}</td>
         <td>{{count}}</td>
