--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -19,7 +19,7 @@
       {{#each items}}
       <tr id='{{id}}' class='jmol-toggle {{class}}' data-sequence='{{sequence}}'
         data-pdb-url={{pdb_url}}>
-        <td class='sequence-cell'><i class="fa {{icon}}"></i>&nbsp;{{sequence}}</td>
+        <td class='sequence-cell'>{{sequence}}</td>
         <td>{{group}}</td>
         <td>{{count}}</td>
         <td>{{pdb}}</td>
