Change Nucleotides to Exemplar Unit Ids
This is a suggestion by Dr. Zirbel.

--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -11,7 +11,7 @@
         <th>Count</th>
         <th>PDB</th>
         <th>Resolution</th>
-        <th>Nucleotides</th>
+        <th>Exemplar Unit Ids</th>
       </tr>
     </thead>
 
