Add hover text to table headers
This is an outline of the text to show when hovering over headers in the table.
It was unclear as to what each column meant and this is intended to make that
clearer.

--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -6,12 +6,12 @@
   <table class='table table-bordered table-hover table-condensed'>
     <thead>
       <tr>
-        <th>Sequence</th>
-        <th>Isostericity Group</th>
-        <th>Count</th>
-        <th>PDB</th>
-        <th>Resolution</th>
-        <th>Exemplar Unit Ids</th>
+        <th class='header' data-header-name='sequence'>Sequence</th>
+        <th class="header" data-header-name='idi'>Isostericity Group</th>
+        <th class="header" data-header-name='count'>Count</th>
+        <th class="header" data-header-name='pdb'>PDB</th>
+        <th class="header" data-header-name='resolution'>Resolution</th>
+        <th class='header' data-header-name='exemplar'>Exemplar Unit Ids</th>
       </tr>
     </thead>
 
