Rename count to Non-Redundant Count
This should help some with what this column means.

--- a/static/templates/pairs-table.hbs
+++ b/static/templates/pairs-table.hbs
@@ -8,7 +8,7 @@
       <tr>
         <th class='header' data-header-name='sequence'>Sequence</th>
         <th class="header" data-header-name='idi'>Isostericity Group</th>
-        <th class="header" data-header-name='count'>Count</th>
+        <th class="header" data-header-name='count'>Non-Redundant Count</th>
         <th class="header" data-header-name='pdb'>PDB</th>
         <th class="header" data-header-name='resolution'>Resolution</th>
         <th class='header' data-header-name='exemplar'>Exemplar Unit Ids</th>
